--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,4 @@ project(cpp_exercises_4 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(cpp_exercises_4 main.cpp)
+add_executable(cpp_exercises_4 ex01.h main.cpp)
