--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,4 @@ project(cpp_exercises_4 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(cpp_exercises_4 ex01.h ex02.h ex03.h main.cpp)
+add_executable(cpp_exercises_4 ex01.h ex02.h ex03.h ex04.h main.cpp)
